# babylog

./: .gitignore  CLAUDE.md  README.md  SPEC.md  baby_log_prompt.md  package-lock.json  run_backend.sh  run_frontend.sh  tail_serve.sh
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: dashboard.py  entry.py  settings.py  upload.py
backend/app/routers/: dashboard.py  entries.py  settings.py  uploads.py
backend/app/services/: llm.py  upload_processor.py
backend/tests/: conftest.py  test_dashboard.py  test_dashboard_diapers.py  test_entries.py  test_health.py  test_settings.py  test_uploads.py
docs/superpowers/plans/: 2026-04-20-dashboard-period-averages.md  2026-05-13-weight-table.md
docs/superpowers/specs/: 2026-04-20-dashboard-period-averages-design.md  2026-05-13-weight-table-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: BottomNav.tsx  BottomSheet.tsx  TopBar.tsx
frontend/src/components/br/: Atmosphere.tsx  ChartCard.tsx  GlyphDot.tsx  LegendRow.tsx  NeonBars.tsx  PageHead.tsx  Pill.tsx  ReadoutTile.tsx  Rule.tsx  theme.ts
frontend/src/components/dashboard/: BreastGapChart.tsx  DailyAvgBarChart.tsx  utils.ts  (+21 more)
frontend/src/hooks/: useIsLandscape.ts  useIsMobile.test.ts  useIsMobile.ts  useProfile.ts
frontend/src/routes/: __root.tsx  dashboard.tsx  index.tsx  log.tsx  profile.tsx  review.tsx
frontend/src/types/: index.ts
(+1 files in other folders)
