[project]
name = "babylog-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "pydantic-settings",
    "aiosqlite",
    "anthropic",
    "openai",
    "python-multipart",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff", "mypy"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/services/llm.py" = ["E501"]
"app/services/upload_processor.py" = ["E501"]
"app/routers/dashboard.py" = ["E501"]
